--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noimageindex" />
+    <meta name="robots" content="noindex,nofollow" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +42,7 @@
   </head>
   <body>
     <div id="insert">
-      <div class="key">Press any key to get the keyCodes.</div>
+      <div class="instruction">Press any key to get the keyCodes.</div>
     </div>
     <script src="script.js"></script>
   </body>
